mdapioutput/objects/License__c.object
<CustomObject>
    <fields>
        <fullName>ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Lisences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsValid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <formula>LisenceTypeId__r.Name +&apos; | &apos;+  ContactId__r.FirstName +&apos; &apos;+  ContactId__r.LastName+&apos; | &apos;+ &apos;Expiration Date &apos;+&apos;&apos;+ Text(DAY(ExpirationDate__c)) +&apos;-&apos;+ text(MONTH(ExpirationDate__c))+&apos;-&apos;+text(YEAR(ExpirationDate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LisenceTypeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State License</label>
        <referenceTo>LicenseType__c</referenceTo>
        <relationshipLabel>Licenses</relationshipLabel>
        <relationshipName>Lisences</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>License</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ContactId__c</columns>
        <columns>IsValid__c</columns>
        <columns>ExpirationDate__c</columns>
        <columns>LisenceTypeId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LS-{0000000}</displayFormat>
        <label>License Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Licenses</pluralLabel>
    <recordTypes>
        <fullName>License</fullName>
        <active>true</active>
        <label>License</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mobile_License</fullName>
        <active>false</active>
        <label>Mobile License</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>